trunk/tests/kiama/negative/type_errors/L4/11_badarray5.ob
MODULE badarray5;

TYPE
    atype4 = ARRAY 10 OF INTEGER;
    
VAR
    array1 : atype4;
    abool : BOOLEAN;
    
BEGIN
    array1[abool] := 1;
END badarray5.
